# nrfhome

./: LICENSE.md  Makefile
avc/: CMakeLists.txt  Makefile  overlay-fota.conf  overlay-ztrace.conf  prj.conf
avc/include/: zb_mem_config_custom_max.h
avc/src/: cc1101.h  main.c
common/: Kconfig  base.mk  mcuboot.conf  pm_ota.yml  pm_raw.yml  pm_static_nrf52840dongle_nrf52840.yml  rules.mk  zb_mem_config_custom_max.h
scripts/: check-signing-key.py  ncs-env.py  nrf-binlog.py  nrf-flash.sh  nrf-serialtrace.py  nrf-tracepoints.py  unix-time-to-version.sh
sdk-patches/: patch.sh  zigbee-diagnostics.patch  zigbee-elec-measurement.patch
switch/: CMakeLists.txt  Makefile  overlay-fota.conf  pm_ota.yml
switch/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay
switch/include/: zb_ha_dimmer_switch.h
switch/src/: main.c
timebeacon/: CMakeLists.txt  Makefile  prj.conf  timebeacon.py
timebeacon/boards/: nrf52840dongle_nrf52840.overlay
timebeacon/src/: main.c
udev/: 51-nrfhome.rules
z2m/: configuration.yaml  nrf-avc.js  nrf-switch.js  ota.json  zigbee-herdsman.patch
zigbee-avc/: CMakeLists.txt  Makefile  pm_static_nrf52840dongle_nrf52840.yml
zigbee-avc/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay
zigbee-avc/child_image/: mcuboot.conf
zigbee-avc/src/: cc1101.c
zigbee-switch/: Kconfig  Makefile  overlay-ztrace.conf  pm_raw.yml  prj.conf
zigbee-switch/boards/: nrf52840dongle_nrf52840.overlay
zigbee-switch/src/: main.c
